--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.1",
+    "gulp-data": "^1.2.1",
     "gulp-imagemin": "^2.4.0",
     "gulp-jshint": "^2.0.4",
     "gulp-plumber": "^1.1.0",
